Fix alignment of header

--- a/src/styles/_project.sass
+++ b/src/styles/_project.sass
@@ -194,7 +194,6 @@
 	height: $project_header-height
 	min-height: $project_header-height
 	width: auto
-	right: 0
 	color: $color-text-dark-secondary
 	border-bottom: thin solid lighten($color-text-dark-hint, 10%)
 	background-color: $color-background-light
